# microservice-cookie-cutter

./: .pre-commit-config.yaml  cookiecutter.json  pyproject.toml
src/app/v1/user/controller/: user_controller.py
src/app/v1/user/exception/: __init__.py
src/app/v1/user/models/: user_model.py
src/app/v1/user/repository/: user_repo.py
src/app/v1/user/schema/: user.py
src/app/v1/user/service/: user_command.py
src/config/: __init__.py
src/core/db/: session.py
src/migrations/versions/: fe1e1f42ea3a_.py
{{cookiecutter.Project_Name}}/: .env  .gitignore  docker-compose.yml  pyproject.toml
{{cookiecutter.Project_Name}}/src/: main.py
{{cookiecutter.Project_Name}}/src/app/: server.py
{{cookiecutter.Project_Name}}/src/app/v1/: __init__.py
{{cookiecutter.Project_Name}}/src/app/v1/user/: __init__.py
{{cookiecutter.Project_Name}}/src/app/v1/user/controller/: user_controller.py
{{cookiecutter.Project_Name}}/src/app/v1/user/exception/: __init__.py
{{cookiecutter.Project_Name}}/src/app/v1/user/models/: user_model.py
{{cookiecutter.Project_Name}}/src/app/v1/user/repository/: user_repo.py
{{cookiecutter.Project_Name}}/src/app/v1/user/schema/: __init__.py  user.py
{{cookiecutter.Project_Name}}/src/app/v1/user/service/: user_command.py  user_query.py
{{cookiecutter.Project_Name}}/src/config/: __init__.py
{{cookiecutter.Project_Name}}/src/core/db/: session.py
{{cookiecutter.Project_Name}}/src/core/exceptions/: __init__.py
{{cookiecutter.Project_Name}}/src/migrations/: env.py
{{cookiecutter.Project_Name}}/src/migrations/versions/: fe1e1f42ea3a_.py
